# bot

./: Dockerfile  README.md  compose-local.yaml  compose.yaml  config.py  main.py  polling.py  pyproject.toml  requirements.txt  webhook.py
.github/workflows/: deploy.yml
app/: bot.py
app/routes/: start.py
app/scenes/: abstract.py  start.py
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.po
