[tool.poetry]
name = "monopoly-bot"
version = "0.1.0"
description = ""
authors = ["Plummy <plummybeatsoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.22.0"
aiogram-cli = "^1.1.0"
pydantic-settings = "^2.10.1"
pytz = "^2025.2"
redis = "^6.4.0"
babel = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
